crates/crochet_parser/src/snapshots/crochet_tree_sitter_parser__tests__pattern_matching.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(r#\"\n            let bar = match (foo) {\n                {x, y: b, z: 5, ...rest} -> \"object\",\n                [a, _, ...rest] -> \"array\",\n                \"string\" -> \"string\",\n                true -> \"true\",\n                false -> \"false\",\n                n -> \"variable\",\n                _ -> \"wildcard\"\n            };\n        \"#)"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 13..318,
                pattern: Ident(
                    BindingIdent {
                        span: 17..20,
                        id: Ident {
                            span: 17..20,
                            name: "bar",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Match(
                        Match {
                            span: 23..317,
                            expr: Ident(
                                Ident {
                                    span: 30..33,
                                    name: "foo",
                                },
                            ),
                            arms: [
                                Arm {
                                    span: 53..89,
                                    pattern: Object(
                                        ObjectPat {
                                            span: 53..77,
                                            props: [
                                                Assign(
                                                    AssignPatProp {
                                                        span: 54..55,
                                                        key: Ident {
                                                            span: 54..55,
                                                            name: "x",
                                                        },
                                                        value: None,
                                                    },
                                                ),
                                                KeyValue(
                                                    KeyValuePatProp {
                                                        key: Ident {
                                                            span: 57..58,
                                                            name: "y",
                                                        },
                                                        value: Ident(
                                                            BindingIdent {
                                                                span: 60..61,
                                                                id: Ident {
                                                                    span: 60..61,
                                                                    name: "b",
                                                                },
                                                            },
                                                        ),
                                                    },
                                                ),
                                                KeyValue(
                                                    KeyValuePatProp {
                                                        key: Ident {
                                                            span: 63..64,
                                                            name: "z",
                                                        },
                                                        value: Lit(
                                                            LitPat {
                                                                span: 66..67,
                                                                lit: Num(
                                                                    Num {
                                                                        span: 66..67,
                                                                        value: "5",
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ),
                                                Rest(
                                                    RestPat {
                                                        span: 69..76,
                                                        arg: Ident(
                                                            BindingIdent {
                                                                span: 72..76,
                                                                id: Ident {
                                                                    span: 72..76,
                                                                    name: "rest",
                                                                },
                                                            },
                                                        ),
                                                    },
                                                ),
                                            ],
                                            optional: false,
                                        },
                                    ),
                                    guard: None,
                                    body: Lit(
                                        Str(
                                            Str {
                                                span: 81..89,
                                                value: "object",
                                            },
                                        ),
                                    ),
                                },
                                Arm {
                                    span: 107..133,
                                    pattern: Array(
                                        ArrayPat {
                                            span: 107..122,
                                            elems: [
                                                Some(
                                                    Ident(
                                                        BindingIdent {
                                                            span: 108..109,
                                                            id: Ident {
                                                                span: 108..109,
                                                                name: "a",
                                                            },
                                                        },
                                                    ),
                                                ),
                                                Some(
                                                    Wildcard(
                                                        WildcardPat {
                                                            span: 111..112,
                                                        },
                                                    ),
                                                ),
                                                Some(
                                                    Rest(
                                                        RestPat {
                                                            span: 114..121,
                                                            arg: Ident(
                                                                BindingIdent {
                                                                    span: 117..121,
                                                                    id: Ident {
                                                                        span: 117..121,
                                                                        name: "rest",
                                                                    },
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                ),
                                            ],
                                            optional: false,
                                        },
                                    ),
                                    guard: None,
                                    body: Lit(
                                        Str(
                                            Str {
                                                span: 126..133,
                                                value: "array",
                                            },
                                        ),
                                    ),
                                },
                                Arm {
                                    span: 151..171,
                                    pattern: Lit(
                                        LitPat {
                                            span: 151..159,
                                            lit: Str(
                                                Str {
                                                    span: 151..159,
                                                    value: "string",
                                                },
                                            ),
                                        },
                                    ),
                                    guard: None,
                                    body: Lit(
                                        Str(
                                            Str {
                                                span: 163..171,
                                                value: "string",
                                            },
                                        ),
                                    ),
                                },
                                Arm {
                                    span: 189..203,
                                    pattern: Lit(
                                        LitPat {
                                            span: 189..193,
                                            lit: Bool(
                                                Bool {
                                                    span: 189..193,
                                                    value: true,
                                                },
                                            ),
                                        },
                                    ),
                                    guard: None,
                                    body: Lit(
                                        Str(
                                            Str {
                                                span: 197..203,
                                                value: "true",
                                            },
                                        ),
                                    ),
                                },
                                Arm {
                                    span: 221..237,
                                    pattern: Lit(
                                        LitPat {
                                            span: 221..226,
                                            lit: Bool(
                                                Bool {
                                                    span: 221..226,
                                                    value: false,
                                                },
                                            ),
                                        },
                                    ),
                                    guard: None,
                                    body: Lit(
                                        Str(
                                            Str {
                                                span: 230..237,
                                                value: "false",
                                            },
                                        ),
                                    ),
                                },
                                Arm {
                                    span: 255..270,
                                    pattern: Ident(
                                        BindingIdent {
                                            span: 255..256,
                                            id: Ident {
                                                span: 255..256,
                                                name: "n",
                                            },
                                        },
                                    ),
                                    guard: None,
                                    body: Lit(
                                        Str(
                                            Str {
                                                span: 260..270,
                                                value: "variable",
                                            },
                                        ),
                                    ),
                                },
                                Arm {
                                    span: 288..303,
                                    pattern: Wildcard(
                                        WildcardPat {
                                            span: 288..289,
                                        },
                                    ),
                                    guard: None,
                                    body: Lit(
                                        Str(
                                            Str {
                                                span: 293..303,
                                                value: "wildcard",
                                            },
                                        ),
                                    ),
                                },
                            ],
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
