crates/crochet_parser/src/snapshots/crochet_tree_sitter_parser__tests__strings-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(r#\"\"hello\";\"#)"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..8,
                expr: Lit(
                    Str(
                        Str {
                            span: 0..7,
                            value: "hello",
                        },
                    ),
                ),
            },
        ],
    },
)
