crates/crochet_parser/src/snapshots/crochet_tree_sitter_parser__tests__strings-5.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"\\\"hello, \\\\\\\"world\\\\\\\"!\\\";\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..20,
                expr: Lit(
                    Str(
                        Str {
                            span: 0..19,
                            value: "hello, \"world\"!",
                        },
                    ),
                ),
            },
        ],
    },
)
