crates/crochet_parser/src/snapshots/crochet_tree_sitter_parser__tests__tuples-3.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let x = [1, [a, b]];\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..20,
                pattern: Ident(
                    BindingIdent {
                        span: 4..5,
                        id: Ident {
                            span: 4..5,
                            name: "x",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Tuple(
                        Tuple {
                            span: 8..19,
                            elems: [
                                ExprOrSpread {
                                    spread: None,
                                    expr: Lit(
                                        Num(
                                            Num {
                                                span: 9..10,
                                                value: "1",
                                            },
                                        ),
                                    ),
                                },
                                ExprOrSpread {
                                    spread: None,
                                    expr: Tuple(
                                        Tuple {
                                            span: 12..18,
                                            elems: [
                                                ExprOrSpread {
                                                    spread: None,
                                                    expr: Ident(
                                                        Ident {
                                                            span: 13..14,
                                                            name: "a",
                                                        },
                                                    ),
                                                },
                                                ExprOrSpread {
                                                    spread: None,
                                                    expr: Ident(
                                                        Ident {
                                                            span: 16..17,
                                                            name: "b",
                                                        },
                                                    ),
                                                },
                                            ],
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
