crates/crochet_parser/src/snapshots/crochet_tree_sitter_parser__tests__tuples.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let x = [];\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..11,
                pattern: Ident(
                    BindingIdent {
                        span: 4..5,
                        id: Ident {
                            span: 4..5,
                            name: "x",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Tuple(
                        Tuple {
                            span: 8..10,
                            elems: [],
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
